--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "firebase": "^7.9.3",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "sass": "^1.26.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
