--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-iframe": "^1.8.0",
     "react-infinite-scroll-hook": "^2.0.1",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
