--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "dotenv": "^8.2.0",
     "firebase": "^7.9.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-iframe": "^1.8.0",
