--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.1.0",
     "dotenv": "^8.2.0",
-    "firebase": "^7.9.3",
+    "firebase": "^7.22.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -24,7 +24,7 @@
     "react-infinite-scroll-hook": "^2.0.1",
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
