--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -22,11 +22,4 @@ jobs:
       - run: |
           npm install
       - run: |
-          npm run all
-  test:
-    runs-on: ubuntu-latest # runs a test on Ubuntu, Windows and macOS
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        with:
-          millisections: 1000
+          npm build
